# SemEval-2026-Task13

./: .gitignore  README.md  eda.ipynb  main.py  pyproject.toml
notebooks/: classic_ml.ipynb  data-explore.ipynb
src/: Embedding_ML.py  Ensemble_ML.py  Finetune_ML.py  Stacked_ML.py  Stylometry_ML.py  Tradional_ML.py
