[project]
name = "semeval-2026-task13"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.0.0",
    "ipython>=9.10.0",
    "joblib>=1.5.3",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "peft>=0.14.0",
    "pyarrow>=23.0.1",
    "pygments>=2.19.2",
    "scikit-learn>=1.8.0",
    "scipy>=1.15.0",
    "torch>=2.6.0",
    "tqdm>=4.67.0",
    "transformers>=4.51.0",
    "xgboost>=3.0.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
]
